# openhdemg

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  OTB_Electrodes.py  OpenEMG_Demo.py  OpenEMG_analysisLIB.py  OpenEMG_openfilesLIB.py  README.md  environment.yml  environment_newest_vestions.yml  examples.py  index.html  long_description.md  mkdocs.yml  objects.inv  openemg_gui.py  openhdemg_gui.py  pyproject.toml  reqs_for_devs.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
about-us/: index.html
api_analysis/: index.html
api_commonality/: index.html
api_compatibility/: index.html
api_decomposition/: index.html
api_electrodes/: index.html
api_info/: index.html
api_mathtools/: index.html
api_muap/: index.html
api_openfiles/: index.html
api_pic/: index.html
api_plotemg/: index.html
api_plotresults/: index.html
api_tools/: index.html
api_widgets/: index.html
cite-us/: index.html
contacts/: index.html
contribute/: index.html
docs/: API_mathtools.md  API_openfiles.md  API_plotemg.md  API_tools.md  About-us.md  Cite-Us.md  Contacts.md  Contribute.md  GUI_advanced.md  GUI_basics.md  GUI_intro.md  Quick-Start.md  Tutorials.md  What's-New.md  about-us.md  api_analysis.md  api_commonality.md  api_compatibility.md  api_decomposition.md  api_electrodes.md  api_info.md  api_mathtools.md  api_muap.md  api_openfiles.md  api_pic.md  api_plotemg.md  api_plotresults.md  api_tools.md  api_widgets.md  cite-us.md  conf.py  contribute.md  gui_advanced.md  gui_basics.md  gui_intro.md  gui_settings.md  index.md  index.rst  isek_jek_tutorials.md  library.rst  (+6 more)
gui_advanced/: index.html
gui_basics/: index.html
gui_intro/: index.html
gui_settings/: index.html
isek_jek_tutorials/: index.html
openhdemg/: __init__.py  __main__.py  analysis.py  demo.py  info.py  mathtools.py  muap.py  openemg_gui.py  openfiles.py  openhdemg_gui.py  otbelectrodes.py  plotemg.py  tools.py
overrides/: main.html
quick-start/: index.html
search/: search_index.json
testgiacomovalli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
v0.1.0/: 404.html  index.html  objects.inv
v0.1.1/: 404.html
v0.1.2/: objects.inv
(+177 files in other folders)
