[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhdemg"
version = "0.0.1-beta"
authors = [
  { name="Giacomo Valli", email="giacomo.valli@phd.unipd.it" },
  { name="Paul Ritsche", email="paul.ritsche@unibas.ch" },
]
description = "Open-source analysis of High-Density EMG data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
        "cycler==0.11.0",
        "fonttools==4.33.3",
        "gzip-utils==2020.7.15", 
        "kiwisolver==1.4.2",
        "matplotlib==3.5.2",
        "numpy==1.22.4",
        "openpyxl==3.0.10",
        "packaging==21.3",
        "pandas==1.4.2",
        "pandastable==0.13.0",
        "Pillow==9.1.1",
        "pyparsing==3.0.9",
        "pyperclip==1.8.2",
        "python-dateutil==2.8.2",
        "pytz==2022.1",
        "scipy==1.8.1",
        "seaborn==0.11.2",
        "six==1.16.0", 
  ]

